@@ -30,6 +30,7 @@ $ -> Language fix or change
 28-Aug-2011 Jean-Marie Simonet
  # [#26696] *Register to read more redirects to login page, not registration. Thanks Elin.
  # [#26026] Detect a BOM in configuration.php. Thanks René.
+ # [#26657] *Sample data button can be clicked twice. Thanks Rouven.
  
 24-Aug-2011 Jean-Marie Simonet
  #$ Added Scottish Gaelic gd-GB in installation language
